# INF2004_Robotic_Car

./: .gitignore  CMakeLists.txt  README.md  htmldata.c  main.c  ssi.h  wifi_task_message_buffer.h  wifi_task_message_receiver.c
html_files/: index.shtml  maze.css  maze.shtml
robotic_car/: CMakeLists.txt  DECIDER_README.md  cgi.h  decider.c  decider.h  htmldata.c  lwipopts.h  motor_controller.h  robotic_car.c
robotic_car/demo/: demo.c
robotic_car/driver/encoder/: wheel_encoder.h
robotic_car/driver/ir_sensor/: barcode.c  barcode_buffer.c  barcode_driver.c  barcode_interpret.c  barcode_interrupt.c  barcode_isr_data.h  test_with_wifi.c
robotic_car/driver/ir_sensor/barcode_subcomponents/: barcode_buffer.c  barcode_interpret.c  barcode_interpret.h  barcode_interrupt.c  barcode_isr_data.h
robotic_car/driver/ir_sensor/wall/: wall_interrupt.c  wall_interrupt.h
robotic_car/driver/magnetnometer/: magnetnometer.c
robotic_car/driver/motor/: motor_controller.h
robotic_car/driver/pico_ultrasonic/: CMakeLists.txt
robotic_car/driver/pico_ultrasonic/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
robotic_car/driver/pico_ultrasonic/ultrasonic_cm/: CMakeLists.txt  getCM.c  ultrasonic.h
robotic_car/driver/ultra_sensor/: README.md  ultra_sensor.c
robotic_car/driver/wall/: wall_interrupt.c  wall_interrupt.h
robotic_car/driver/wifi/: README.md  cgi.h  htmldata.c  main.c  ssi.h  wifi_task_message_buffer.h  wifi_task_message_receiver.c
robotic_car/html_files/: index.shtml
robotic_car/robotic_car_maze/: maze.c  robotic_car_maze.c
robotic_car/test/: motor_test.h
robotic_car_maze/: CMakeLists.txt  maze.c  readme.md  robotic_car_maze.c
robotic_car_maze_display/: README.md  package-lock.json  package.json
robotic_car_maze_display/public/: index.html
robotic_car_maze_display/src/: App.css  App.js
robotic_car_maze_nocar/: CMakeLists.txt  maze.c  readme.md  robotic_car_maze.c
